# CP10_node_composition

attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  test.launch.py
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.hpp  attach_server.hpp  preapproach.hpp
my_components/launch/: attach_to_shelf.launch.py  test_cp10.launch.xml  test_cp10_v2.launch.py
my_components/rviz/: cp10.rviz
my_components/src/: attach_client.cpp  attach_server.cpp  manual_composition.cpp  pre_approach_component.cpp  preapproach.cpp
